--- a/index.html
+++ b/index.html
@@ -1,79 +1,353 @@
-<!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Resume : ">
+<head></head>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<body>
 
-    <title>Resume</title>
-  </head>
 
-  <body>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <link href="http://bootswatch.com/lumen/bootstrap.min.css" rel="stylesheet">
+    <style>
+        @import url(http://fonts.googleapis.com/css?family=Open+Sans:300|Oswald:300);
+        body {
+            font-family: 'Open Sans', 'Helvetica Neue Light', sans-serif;
+            font-weight: 300;
+        }
+        h1,
+        h2,
+        h3 {
+            font-family: 'Oswald', sans-serif;
+        }
+        h1 {
+            font-weight: 700;
+        }
+        h2,
+        h3 {
+            font-weight: 300;
+        }
+        main {
+            padding: 20px 0;
+        }
+        .vr {
+            display: inline;
+            margin: 0.5em 0px;
+            width: 1px;
+            height: 1em;
+            border-left: 1px solid gray;
+        }
+        section#header img {
+            padding: 20px;
+        }
+        section#header .title .vr {
+            display: none;
+            ;
+        }
+        @media (min-width: 768px),
+        print {
+            section#header img {
+                width: 4em;
+                height: 4em;
+                padding: 0px;
+                float: right;
+            }
+            section#header .title h1,
+            h2 {
+                display: inline !important;
+                padding-right: 20px;
+            }
+            section#header .title .vr {
+                display: inline;
+            }
+        }
+        section#skills .details {
+            -moz-column-count: 2;
+            -moz-column-gap: 0px;
+            -webkit-column-count: 2;
+            -webkit-column-gap: 0px;
+            column-count: 2;
+            column-gap: 0px;
+        }
+        .details h4 {
+            margin-top: 20px;
+            margin-bottom: 5px;
+        }
+        .date {
+            font-size: 15px;
+            line-height: 24px;
+        }
+        .website {
+            line-height: 18px;
+        }
+        /* Fix for print */
+        
+        @media print {
+            a[href]:after {
+                content: none !important;
+            }
+            body {
+                font-size: 9px;
+            }
+            h1 {
+                font-size: 31px;
+            }
+            h2 {
+                font-size: 25px;
+            }
+            h3 {
+                font-size: 19px;
+            }
+            .col-sm-1,
+            .col-sm-2,
+            .col-sm-3,
+            .col-sm-4,
+            .col-sm-5,
+            .col-sm-6,
+            .col-sm-7,
+            .col-sm-8,
+            .col-sm-9,
+            .col-sm-10,
+            .col-sm-11,
+            .col-sm-12 {
+                float: left;
+            }
+            .col-sm-12 {
+                width: 100%;
+            }
+            .col-sm-11 {
+                width: 91.66666666666666%;
+            }
+            .col-sm-10 {
+                width: 83.33333333333334%;
+            }
+            .col-sm-9 {
+                width: 75%;
+            }
+            .col-sm-8 {
+                width: 66.66666666666666%;
+            }
+            .col-sm-7 {
+                width: 58.333333333333336%;
+            }
+            .col-sm-6 {
+                width: 50%;
+            }
+            .col-sm-5 {
+                width: 41.66666666666667%;
+            }
+            .col-sm-4 {
+                width: 33.33333333333333%;
+            }
+            .col-sm-3 {
+                width: 25%;
+            }
+            .col-sm-2 {
+                width: 16.666666666666664%;
+            }
+            .col-sm-1 {
+                width: 8.333333333333332%;
+            }
+        }
+    </style>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/bogushvitaly/resume">View on GitHub</a>
 
-          <h1 id="project_title">Resume</h1>
-          <h2 id="project_tagline"></h2>
+    <div class="container-fluid">
+        <main class="row">
+            <div class="col-sm-12 col-md-8 col-md-offset-2">
+                <section id="header" class="row">
+                    <div class="col-sm-9 col-xs-12 title">
+                        <h1>Vitaly Bogush</h1>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/bogushvitaly/resume/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/bogushvitaly/resume/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+                        <h2 class="vr"></h2>
+
+                        <h2>Software Engineer</h2>
+                    </div>
+                    <div class="col-sm-3 col-xs-12 text-center photo">
+                        <img class="media-object img-circle" data-src="holder.js/64x64" alt="64x64" src="http://www.gravatar.com/avatar/869c02822c5e3e718e1a89b313661de8?size=100&amp;rating=g&amp;default=blank">
+                    </div>
+                </section>
+                <hr style="color: #ccc; height: 4px;">
+                <section id="about" class="row">
+                    <header class="col-sm-3">
+                        <h3>About</h3>
+                    </header>
+                    <div class="col-sm-9">
+                        <p>I'm a software developer specialized mainly in web application development. I understand all aspects of the web application creation process and keep myself aware of cutting edge technology and design trends. Especially I enjoyed
+                            in creating high-performance web application with rich user interface. I am seeking an opportunity that will allow me to contribute my skills in new environments, enhance my international experience and broaden my horizons.</p>
+                        <strong>Phone:</strong> +375 (29) 533-0951
+                        <br>
+                        <strong>Email:</strong> <a href="mailto:bogushvitaly@gmail.com">bogushvitaly@gmail.com</a>
+                        <br>
+                        <section id="profiles">
+                            <strong class="network">
+                            Odesk:
+                        </strong>
+                            <a target="_blank" href="https://www.odesk.com/users/~01e5e13def586cfca6">vitaly.bogush</a>
+                            <br>
+                        </section>
+                    </div>
+                </section>
+                <hr>
+                <section id="skills" class="row">
+                    <header class="col-sm-3">
+                        <h3>Skills</h3>
+                    </header>
+                    <div class="col-sm-9">
+                        <div class="details row">
+                            <div class="col-sm-12">
+                                <ul>
+                                    <li>
+                                        <h4>Web Development <span class="pull-right"></span></h4>
+                                        <ul>
+                                            <li>Full-stack JavaScript (ES6, CoffeeScript, Underscore)</li>
+                                            <li>CSS (LESS, SCSS, Stylus)</li>
+                                            <li>HTML5 (WebComponents)</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-12">
+                                <ul>
+                                    <li>
+                                        <h4>Frameworks <span class="pull-right"></span></h4>
+                                        <ul>
+                                            <li>AngularJS</li>
+                                            <li>Meteor</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-12">
+                                <ul>
+                                    <li>
+                                        <h4>TOOLS <span class="pull-right"></span></h4>
+                                        <ul>
+                                            <li>Grunt</li>
+                                            <li>Bower</li>
+                                            <li>Yeoman</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-12">
+                                <ul>
+                                    <li>
+                                        <h4>UI Building tools <span class="pull-right"></span></h4>
+                                        <ul>
+                                            <li>Bootstrap</li>
+                                            <li>SemanticUI</li>
+                                            <li>Polymer</li>
+                                            <li>Famo.US</li>
+                                            <li>Three.js</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-12">
+                                <ul>
+                                    <li>
+                                        <h4>Programming concepts <span class="pull-right"></span></h4>
+                                        <ul>
+                                            <li>OOP</li>
+                                            <li>REST</li>
+                                            <li>Data Structures and Algorithms</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-sm-12">
+                                <ul>
+                                    <li>
+                                        <h4>Testing tools <span class="pull-right"></span></h4>
+                                        <ul>
+                                            <li>JUnit</li>
+                                            <li>Jasmine</li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <hr>
+                <section id="work" class="row">
+                    <header class="col-sm-3">
+                        <h3>Work Experience</h3>
+                    </header>
+                    <div class="col-sm-9">
+                        <div class="details">
+                            <h3>RedSoft Pro<span class="date pull-right">2014 - 2015</span></h3>
+                            <strong>Software Developer</strong>
+
+                            <div class="website pull-right">
+                                <a target="_blank" href="http://redsoft.pro/">http://redsoft.pro/</a>
+                            </div>
+                            <p></p>
+                            <ul>
+                            </ul>
+
+                            <h3>RUE "Belpost"<span class="date pull-right">2011 - 2013</span></h3>
+                            <strong>Engineer</strong>
+
+                            <div class="website pull-right">
+                                <a target="_blank" href="http://www.belpost.by/">http://www.belpost.by/</a>
+                            </div>
+                            <p>My activities at first work was based on network administration and trivial software engineering. Duties include maintenance network, troubleshooting hardware (computers, cash registers, POS), database administration (1C, Paradox,
+                                FoxPro), using virtualization software(VirtualBox, VMware), document control, user software support.</p>
+                            <ul>
+                                <li>Follow the principle - When you do something more than once, automate it.</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </section>
+                <hr>
+
+                <section id="education" class="row">
+                    <header class="col-sm-3">
+                        <h3>Education</h3>
+                    </header>
+                    <div class="col-sm-9">
+                        <div class="details">
+                            <h3>Grodno State College of techniques, technologies and design<span class="date pull-right">2009 - 2012</span>
+                        </h3>
+                            <strong>Software development and computer graphics, Bachelor</strong>
+
+                            <p></p>
+                            <ul class="courses">
+                                <li>Coursera - Algorithms</li>
+                                <li>Udacity - Interactive 3D Graphics</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <hr>
+
+                <section id="languages" class="row">
+                    <header class="col-sm-3">
+                        <h3>Languages</h3>
+                    </header>
+                    <div class="col-sm-9">
+                        <div class="details">
+                            <ul>
+                                <li>
+                                    <h4>English <span class="pull-right">Intermediate</span></h4>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+                <hr>
+                <footer></footer>
+            </div>
+        </main>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Resume maintained by <a href="https://github.com/bogushvitaly">bogushvitaly</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
